--- a/docker_hoernchen/docker-compose.yml
+++ b/docker_hoernchen/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - http.port=9200
       - http.cors.enabled=true
       # TODO http.cors.allow-origin: "http://reactive-search-app-domain.com:port" <-- evtl noch anpassen (https://opensource.appbase.io/reactive-manual/getting-started/reactivebase.html)
-      - http.cors.allow-origin=http://localhost:1358,http://127.0.0.1:1358,http://localhost:8080,http://localhost:80,http://localhost
+      - http.cors.allow-origin=*
       - http.cors.allow-headers=X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization, Access-Control-Allow-Headers, Accept
       - http.cors.allow-credentials=true
       - bootstrap.memory_lock=true
