--- a/docker_hoernchen/vue_hoernchen/nginx.conf
+++ b/docker_hoernchen/vue_hoernchen/nginx.conf
@@ -17,11 +17,14 @@ http {
   server {
     listen       80;
     server_name  localhost;
+    location /es/ {
+      proxy_pass http://docker_hoernchen_elasticsearch_1:9200/;
+    }
     location / {
       root   /app;
       index  index.html;
-      try_files $uri $uri/ /index.html;
     }
+      try_files $uri $uri/ /index.html;
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
