added oerinfo to index

--- a/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
+++ b/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
@@ -1,15 +1,29 @@
 input {
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
-        jdbc_user => "root"
-        jdbc_password => "my-secret-pw"
+        jdbc_user => "oerhoernchen"
+        jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM oerhoernchen_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM hoou_tb WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
         schedule => "* * * * *"
+        type => "hoou"
+    }
+    jdbc {
+        jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
+        jdbc_user => "oerhoernchen"
+        jdbc_password => "oerhoernchenpw"
+        jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
+        jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
+        statement => "SELECT * FROM oerinfo_tb WHERE date_scraped >:sql_last_value"
+        use_column_value => true
+        tracking_column => date_scraped
+        tracking_column_type => "timestamp"
+        schedule => "* * * * *"
+        type => "oerinfo"
     }
 }
 
@@ -17,7 +31,7 @@ output {
     stdout { codec => json_lines }
     elasticsearch {
         hosts => ["http://elasticsearch:9200"]
-        index => "hoou"
+        index => "%{type}"
         action => update
         document_id => "%{[url]}"
         doc_as_upsert => true
