--- a/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
+++ b/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
@@ -35,5 +35,7 @@ output {
         action => update
         document_id => "%{[url]}"
         doc_as_upsert => true
+        user => "elastic"
+        password => "changethisinproduction"
     }
 }
