--- a/docker_hoernchen/vue_hoernchen/package.json
+++ b/docker_hoernchen/vue_hoernchen/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "bootstrap-vue": "^2.1.0",
     "vue": "^2.5.11",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.1.3"
   },
   "browserslist": [
     "> 1%",
