--- a/docker_hoernchen/vue_hoernchen/nginx.conf
+++ b/docker_hoernchen/vue_hoernchen/nginx.conf
@@ -20,6 +20,30 @@ http {
     location /es/ {
       proxy_pass http://docker_hoernchen_elasticsearch_1:9200/;
     }
+    location /kibana/ {
+      proxy_pass http://docker_hoernchen_kibana_1:5601/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      # For development
+      # proxy_set_header Authorization "Basic ZWxhc3RpYzpjaGFuZ2V0aGlzaW5wcm9kdWN0aW9u";
+      # For "production"
+      # proxy_set_header Authorization "Basic aG9lcm5jaGVuOmhvZXJuY2hlbg==";
+      proxy_cache_bypass $http_upgrade;
+    }
+    location /kibana_dashboard/ {
+      proxy_pass http://docker_hoernchen_kibana_dashboard_1:5601/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      # For development
+      # proxy_set_header Authorization "Basic ZWxhc3RpYzpjaGFuZ2V0aGlzaW5wcm9kdWN0aW9u";
+      # For "production"
+      proxy_set_header Authorization "Basic aG9lcm5jaGVuOmhvZXJuY2hlbg==";
+      proxy_cache_bypass $http_upgrade;
+    }
     location / {
       root   /app;
       index  index.html;
