added a map section to metadata section

--- a/docker_hoernchen/docker-compose.yml
+++ b/docker_hoernchen/docker-compose.yml
@@ -59,6 +59,11 @@ services:
       dockerfile: logstash_mysql.Dockerfile
     networks:
       - elasticnet
+    # healthcheck:
+    #   test: ["CMD", "curl", "--fail", "http://elasticsearch:9200/", "-H", "'Content-Type: application/json'", "-H", "'Authorization: Basic ZWxhc3RpYzpjaGFuZ2V0aGlzaW5wcm9kdWN0aW9u'", "||", "exit 1"]
+    #   interval: 1m30s
+    #   timeout: 60s
+    #   retries: 3
     depends_on:
       - elasticsearch
       - mysql
@@ -73,6 +78,11 @@ services:
       - elasticsearch
     networks:
       - elasticnet
+    # healthcheck:
+    #   test: ["CMD", "curl", "--fail", "http://elasticsearch:9200/", "-H", "'Content-Type: application/json'", "-H", "'Authorization: Basic ZWxhc3RpYzpjaGFuZ2V0aGlzaW5wcm9kdWN0aW9u'", "||", "exit 1"]
+    #   interval: 1m30s
+    #   timeout: 60s
+    #   retries: 3
     deploy:
       restart_policy:
         condition: none
