--- a/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
+++ b/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
@@ -5,7 +5,7 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM hoou_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM hoou_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
@@ -18,7 +18,7 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM oerinfo_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM oerinfo_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
@@ -31,7 +31,7 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM hhu_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM hhu_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
@@ -44,7 +44,7 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM openrub_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM openrub_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
@@ -57,7 +57,7 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM digill_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM digill_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
@@ -70,7 +70,7 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM zoerr_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM zoerr_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
@@ -83,12 +83,25 @@ input {
         jdbc_password => "oerhoernchenpw"
         jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
         jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
-        statement => "SELECT * FROM tibav_tb WHERE date_scraped >:sql_last_value"
+        statement => "SELECT * FROM tibav_tb_edited WHERE date_scraped >:sql_last_value"
         use_column_value => true
         tracking_column => date_scraped
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "tibav"
+    }
+    jdbc {
+        jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
+        jdbc_user => "oerhoernchen"
+        jdbc_password => "oerhoernchenpw"
+        jdbc_driver_library => "/usr/share/logstash/logstash-core/lib/jars/mysql-connector-java.jar"
+        jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
+        statement => "SELECT * FROM oncampus_tb_edited WHERE date_scraped >:sql_last_value"
+        use_column_value => true
+        tracking_column => date_scraped
+        tracking_column_type => "timestamp"
+        schedule => "*/5 * * * *"
+        type => "oncampus"
     }
 }
 
@@ -96,11 +109,14 @@ output {
     stdout { codec => json_lines }
     elasticsearch {
         hosts => ["http://elasticsearch:9200"]
-        index => "%{type}"
+        index => "oer_%{type}"
         action => update
         document_id => "%{[url]}"
         doc_as_upsert => true
         user => "elastic"
         password => "changethisinproduction"
+        template => "/usr/share/logstash/templates/mapping.json"
+        template_name => "oer*"
+        template_overwrite => true
     }
 }
