--- a/docker_hoernchen/vue_hoernchen/package.json
+++ b/docker_hoernchen/vue_hoernchen/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
+    "axios": "^0.18.0",
     "bootstrap-vue": "^2.1.0",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
