--- a/docker_hoernchen/vue_hoernchen/package.json
+++ b/docker_hoernchen/vue_hoernchen/package.json
@@ -18,9 +18,11 @@
     "@fortawesome/vue-fontawesome": "^0.1.8",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.1.0",
+    "jwt-decode": "^2.2.0",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "browserslist": [
     "> 1%",
