--- a/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
+++ b/docker_hoernchen/logstash_mysql/pipeline/logstash.conf
@@ -11,6 +11,8 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "hoou"
+        lowercase_column_names => false
+
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -24,6 +26,7 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "oerinfo"
+        lowercase_column_names => false
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -37,6 +40,7 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "hhu"
+        lowercase_column_names => false
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -50,6 +54,8 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "openrub"
+        lowercase_column_names => false
+
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -63,6 +69,7 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "digill"
+        lowercase_column_names => false
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -76,6 +83,7 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "zoerr"
+        lowercase_column_names => false
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -89,6 +97,7 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "tibav"
+        lowercase_column_names => false
     }
     jdbc {
         jdbc_connection_string => "jdbc:mysql://mysql:3306/oerhoernchen_db"
@@ -102,6 +111,7 @@ input {
         tracking_column_type => "timestamp"
         schedule => "*/5 * * * *"
         type => "oncampus"
+        lowercase_column_names => false
     }
 }
 
