--- a/docker_hoernchen/flask/requirements.txt
+++ b/docker_hoernchen/flask/requirements.txt
@@ -1,12 +1,9 @@
-aniso8601==8.0.0
-Click==7.0
+elasticsearch==7.6.0
 Flask==1.1.1
-Flask-JWT==0.3.2
+Flask-Cors==3.0.8
+Flask-JWT-Extended==3.24.1
 Flask-RESTful==0.3.8
-itsdangerous==1.1.0
-Jinja2==2.11.1
-MarkupSafe==1.1.1
-PyJWT==1.4.2
-pytz==2019.3
-six==1.14.0
+rdflib==4.2.2
+rdflib-jsonld==0.4.0
+requests==2.23.0
 Werkzeug==1.0.0
