--- a/docker_hoernchen/vue_hoernchen/nginx.conf
+++ b/docker_hoernchen/vue_hoernchen/nginx.conf
@@ -26,10 +26,6 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
-      # For development
-      # proxy_set_header Authorization "Basic ZWxhc3RpYzpjaGFuZ2V0aGlzaW5wcm9kdWN0aW9u";
-      # For "production"
-      # proxy_set_header Authorization "Basic aG9lcm5jaGVuOmhvZXJuY2hlbg==";
       proxy_cache_bypass $http_upgrade;
     }
     location /kibana_dashboard/ {
@@ -38,10 +34,15 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       proxy_set_header Host $host;
-      # For development
-      # proxy_set_header Authorization "Basic ZWxhc3RpYzpjaGFuZ2V0aGlzaW5wcm9kdWN0aW9u";
-      # For "production"
       proxy_set_header Authorization "Basic aG9lcm5jaGVuOmhvZXJuY2hlbg==";
+      proxy_cache_bypass $http_upgrade;
+    }
+    location /flask/ {
+      proxy_pass http://docker_hoernchen_flask_1:5000/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
       proxy_cache_bypass $http_upgrade;
     }
     location / {
